A bit of usability love to questions

--- a/experiment/css/style.css
+++ b/experiment/css/style.css
@@ -38,3 +38,12 @@ body {
 .questions p {
     font-weight: bold;
 }
+
+.questions label {
+    margin-right: 20px;
+}
+
+.questions input[type="radio"]:checked + label{
+    font-weight: bold;
+    text-decoration: underline;
+}
